# ai-rsk

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PATCH-v0.7.2.md  README.md  SECURITY.md  VISION.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
rules/: bearer-exposed-client.yaml  body-parser-no-limit.yaml  cdn-script-no-sri.yaml  client-side-auth-only.yaml  console-log-sensitive.yaml  cors-wildcard.yaml  dangerouslysetinnerhtml-dynamic.yaml  eval-dynamic.yaml  hardcoded-secret.yaml  jwt-sensitive-payload.yaml  missing-csp.yaml  missing-hsts.yaml  missing-httponly.yaml  missing-rate-limit.yaml  missing-samesite.yaml  missing-secure-cookie.yaml  missing-xcontent-type.yaml  missing-xframe.yaml  negative-business-value.yaml  no-helmet.yaml  postmessage-no-origin.yaml  prompt-injection-concat.yaml  select-star-response.yaml  source-maps-in-prod.yaml  ssrf-dynamic-fetch.yaml  stripe-no-webhook-verify.yaml  token-in-localstorage.yaml  unvalidated-redirect.yaml  websocket-no-auth.yaml  window-opener-no-noopener.yaml  xpoweredby-exposed.yaml
src/: analyze.rs  cli.rs  config.rs  detect.rs  embedded_rules.rs  init.rs  main.rs  rules.rs  runner.rs  tools.rs  types.rs  version.rs
tests/fixtures/safe/: auth.js  bearer.js  body-parser.js  cdn-script.html  client-auth.js  console-log.js  jwt-payload.js  missing-csp.js  missing-hsts.js  missing-httponly.js  missing-rate-limit.js  missing-samesite.js  missing-secure-cookie.js  missing-xcontent-type.js  missing-xframe.js  negative-business.js  postmessage.js  source-maps.js  websocket.js  xpoweredby.js  (+1 more)
(+21 files in other folders)
